--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!--
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons" />
+      
     <!--
     Notice the use of %PUBLIC_URL% in the tags above.
     It will be replaced with the URL of the `public` folder during the build.
@@ -24,10 +25,15 @@
     Learn how to configure a non-root public URL by running `npm run build`.
   -->
 
+    <!--
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    --> 
+    <!--
+    <link href="./assets/fonts/MundialLight.otf" rel="stylesheet">
+    -->
 
-    <title>Messenger</title>
+    <title>Kanban boards for School</title>
   </head>
 
 
